--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,14 @@
     <groupId>hjin.commons</groupId>
     <artifactId>commons-web</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.7</version>
+    <version>1.0.8</version>
     <name>commons-web</name>
     <url>https://github.com/hjshiwbd</url>
 
     <description>
+        ---
+        1.0.8
+        方法名定义bug
         ---
         1.0.6 and 1.0.7
         增加多数据源时,用户的企业id
